Agregar boton redireccion Git

--- a/src/app/Maquinas/components/navbar/navbar.component.html
+++ b/src/app/Maquinas/components/navbar/navbar.component.html
@@ -15,6 +15,7 @@
       <div class="navbar-links">
         <a routerLinkActive="active-link" [routerLink]="['/nodeterminista']" class="nav-link">No Determinista</a>
         <a routerLinkActive="active-link" [routerLink]="['/utm']" class="nav-link">UTM</a>
+        <a href="https://github.com/bum-spark/examenTuring" target="_blank" class="nav-link">GitHub</a>
       </div>
     </div>
   </div>
